left alignment fixed

--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,16 @@
 * {
-  font-family: 'Spartan', sans-serif !important;
-  position: relative;
-  overflow-x: hidden;
+    font-family: "Spartan", sans-serif !important;
+    position: relative;
+    overflow-x: hidden;
 }
 
 .container {
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.inner-container {
+    max-width: 65ch;
+}
