--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,11 +1,10 @@
 .hero-container {
-    min-width: 100vw;
+    padding: 0rem 1rem;
     min-height: 100vh;
     width: 100vw;
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
     padding-top: 3rem;
 }
