--- a/src/components/SocialIcons/socialIcons.css
+++ b/src/components/SocialIcons/socialIcons.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 20;
 }
 
 @media screen and (max-width: 750px) {
@@ -40,6 +41,3 @@
     width: 1px;
     background-color: rgb(168, 178, 209);
 }
-
-
-
